# MyHttpServer

./: CMakeLists.txt  README.md
date/: log.html  logError.html  register.html  registerError.html  welcome.html
include/http/: httpconnection.hpp
include/lock/: locker.hpp
include/log/: blockqueue.hpp  log.hpp
include/mysql/: mysqlpool.hpp
include/threadpool/: threadpool.hpp
include/time/: timelist.hpp
src/: CMakeLists.txt  main.cpp
src/http/: httpconnection.cpp
src/log/: log.cpp
src/mysql/: mysqlpool.cpp
test/: test.txt
